adds FullCalendar with updated bootstrap theme

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -41,12 +41,14 @@
       <!--RTLSTYLES-->
       <link rel="stylesheet" href="/dependencies/bootstrap-4/bootstrap-4.rtl.css">
       <link rel="stylesheet" href="/dependencies/fontawesome.css">
+      <link rel="stylesheet" href="/dependencies/fullcalendar/main.rtl.css">
       <link rel="stylesheet" href="/styles/importer.rtl.css">
       <!--RTLSTYLES END-->
     <% } else { %>
       <!--STYLES-->
       <link rel="stylesheet" href="/dependencies/bootstrap-4/bootstrap-4.css">
       <link rel="stylesheet" href="/dependencies/fontawesome.css">
+      <link rel="stylesheet" href="/dependencies/fullcalendar/main.css">
       <link rel="stylesheet" href="/styles/importer.css">
       <!--STYLES END-->
     <% } %>
@@ -251,6 +253,7 @@
     <script src="/dependencies/vue-router.js"></script>
     <script src="/dependencies/bootstrap-4/bootstrap-4.bundle.js"></script>
     <script src="/dependencies/cloud.js"></script>
+    <script src="/dependencies/fullcalendar/main.js"></script>
     <script src="/dependencies/moment.js"></script>
     <script src="/dependencies/parasails.js"></script>
     <script src="/js/cloud.setup.js"></script>
