--- a/views/pages/dashboard/welcome.ejs
+++ b/views/pages/dashboard/welcome.ejs
@@ -1,5 +1,6 @@
 <div id="welcome">
   <div class="container pt-5 pb-5">
+    <download-mobile-app></download-mobile-app>
     <div id="calendar">
       <div class="progress">
         <div class="bg-dark progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
