Add download App popup

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -21,6 +21,7 @@
 @import 'components/ajax-button.component.less';
 @import 'components/modal.component.less';
 @import 'components/cloud-error.component.less';
+@import 'components/download-mobile-app.component.less';
 
 // Per-page styles
 @import 'pages/homepage.less';
