--- a/assets/styles/components/download-mobile-app.component.less
+++ b/assets/styles/components/download-mobile-app.component.less
@@ -3,61 +3,22 @@
    * App-wide styles for our download mobile app popup.
    */
 [parasails-component='download-mobile-app'] {
-  .mobileapplink {
-    width: 100%;
-    height: 88px;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    position: relative;
-    background: #fff;
-    border-bottom: 1px solid #ddd;
-    a {
-      display: flex;
-      flex: 1;
-      align-items: center;
-      text-decoration: none;
-      font-size: 13px;
-      color: #222;
-      padding-right: 5px;
-      .mobileapplink__text {
-        line-height: 1.4;
-        strong {
-          font-size: 15px;
-          line-height: 1.1;
-        }
-      }
-      img {
-        margin-right: 10px;
-        border-radius: 10px;
-      }
-    }
-    .close {
-      position: absolute;
-      font-family: Arial;
-      font-size: 16px;
-      transform: scaleX(1.22);
-      cursor: pointer;
-      color: #888;
-      top: 1px;
-      right: 10px;
-    }
+  .x-color {
+    color: #abb6c2
   }
-  .mobileapplink__btn {
-    margin-left: auto;
-    background: orange;
-    color: #fff;
-    font-weight: bold;
-    font-family: Arial;
-    font-size: 12px;
-    display: inline-block;
-    padding: 10px 15px;
-    border-radius: 5px;
+  .alert-light {
+    background-color: white;
   }
-  @media only screen and (min-width: 992px) {
-    .mobileapplink {
-      display: none;
-    }
+  img {
+    border-radius: 10px;
+    display: inline;
+  }
+  .close {
+    outline:none;
+  }
+  .open-app{
+    position: absolute;
+    right: 4em;
+    top: 1.5em;
   }
 }
