--- a/views/pages/account/edit-password.ejs
+++ b/views/pages/account/edit-password.ejs
@@ -8,7 +8,7 @@
                     <div class="form-group password-container">
                         <label for="updated-password">New password</label>
                         <input class="form-control input" id="updated-password" :type="[ formData.showPassword ? 'text' : 'password' ]" name="updated-password" :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" placeholder="••••••••" autocomplete="password" focus-first>
-                        <i :class="[ formData.showPassword ? 'fa fa-eye' : 'fa fa-eye-slash' ]" class="toggle-password" @click="togglePassword()"></i>
+                        <i :class="[ formData.showPassword ? 'fa fa-eye' : 'fa fa-eye-slash' ]" class="toggle-password text-dark" @click="togglePassword()"></i>
                         <div class="invalid-feedback" v-if="formErrors.password">Please enter a password or choose
                             "Cancel".
                         </div>
