--- a/views/pages/account/edit-profile.ejs
+++ b/views/pages/account/edit-profile.ejs
@@ -17,11 +17,18 @@
       <div class="tab-pane fade mt-4" :class="[ tab == '' ? 'active show' : '']" id="home" role="tabpanel" aria-labelledby="home-tab">
         <ajax-form action="updateProfile" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
           <div class="row">
+          <div class="col-sm-6">
+            <div class="form-group">
+              <label for="first-name">First name</label>
+              <input class="form-control" id="first-name" name="first-name" type="text"  :class="[formErrors.firstName ? 'is-invalid' : '']" v-model.trim="formData.firstName" placeholder="Sturgeon" autocomplete="name">
+              <div class="invalid-feedback" v-if="formErrors.firstName">Please enter your first name.</div>
+            </div>
+          </div>
             <div class="col-sm-6">
               <div class="form-group">
-                <label for="full-name">Full name</label>
-                <input class="form-control" id="full-name" name="full-name" type="text"  :class="[formErrors.fullName ? 'is-invalid' : '']" v-model.trim="formData.fullName" placeholder="Sturgis P. Sturgeon" autocomplete="name" focus-first>
-                <div class="invalid-feedback" v-if="formErrors.fullName">Please enter your full name.</div>
+                <label for="last-name">Last name</label>
+                <input class="form-control" id="last-name" name="last-name" type="text"  :class="[formErrors.lastName ? 'is-invalid' : '']" v-model.trim="formData.lastName" placeholder="Sturgeon" autocomplete="name">
+                <div class="invalid-feedback" v-if="formErrors.lastName">Please enter your last name.</div>
               </div>
             </div>
             <div class="col-sm-6">
@@ -88,7 +95,7 @@
             </div>
             <div class="col-sm-6">
               <div class="form-group text-right">
-                <ajax-button type="submit" :syncing="userSyncing" class="btn btn-dark">Add user</ajax-button>
+                <ajax-button type="submit" :syncing="userSyncing" class="btn btn-primary">Add Agent</ajax-button>
               </div>
             </div>
           </div>
