--- a/views/pages/entrance/forgot-password.ejs
+++ b/views/pages/entrance/forgot-password.ejs
@@ -11,10 +11,10 @@
         </div>
         <cloud-error v-if="cloudError"></cloud-error>
         <div class="form-group">
-          <ajax-button type="submit" :syncing="syncing" class="btn btn-dark btn-lg btn-block">Send reset link</ajax-button>
+          <ajax-button type="submit" :syncing="syncing" class="btn btn-primary btn-lg btn-block">Send reset link</ajax-button>
         </div>
       </ajax-form>
-      <p class="text-center"><a href="/login">Back to login</a></p>
+      <p class="text-center"><a href="/login" class="text-primary">Back to login</a></p>
     </div>
     <div style="max-width:  450px;" class="mx-auto text-center" v-else>
       <p>We've sent you a link to update your password.</p>
