--- a/views/pages/entrance/login.ejs
+++ b/views/pages/entrance/login.ejs
@@ -16,7 +16,7 @@
                         <input id="password" :type="[ formData.showPassword ? 'text' : 'password' ]" class="form-control" placeholder="Password"
                                :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password"
                                autocomplete="current-password">
-                        <i :class="[ formData.showPassword ? 'fa fa-eye' : 'fa fa-eye-slash' ]" class="toggle-password" @click="togglePassword()"></i>
+                        <i :class="[ formData.showPassword ? 'fa fa-eye' : 'fa fa-eye-slash' ]" class="toggle-password text-dark" @click="togglePassword()"></i>
                         <div class="invalid-feedback" v-if="formErrors.password">Please enter your password.</div>
                 </div>
                 <div class="form-group form-check remember-me">
@@ -29,10 +29,10 @@
                 </cloud-error>
                 <cloud-error v-else-if="cloudError"></cloud-error>
                 <div class="form-group">
-                    <ajax-button :syncing="syncing" class="btn-dark btn-lg btn-block">Sign in</ajax-button>
+                    <ajax-button :syncing="syncing" class="btn-primary btn-lg btn-block">Sign in</ajax-button>
                 </div>
             </ajax-form>
-            <p class="text-center"><a href="/password/forgot">Forgot your password?</a></p>
+            <p class="text-center"><a class="text-primary" href="/password/forgot">Forgot your password?</a></p>
         </div>
     </div>
 </div>
