--- a/views/pages/entrance/signup.ejs
+++ b/views/pages/entrance/signup.ejs
@@ -28,7 +28,7 @@
                     <input class="form-control" id="signup-password" :type="[ formData.showPassword ? 'text' : 'password' ]"
                            :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password"
                            placeholder="••••••••" autocomplete="new-password">
-                    <i :class="[ formData.showPassword ? 'fa fa-eye' : 'fa fa-eye-slash' ]" class="toggle-password" @click="togglePassword()"></i>
+                    <i :class="[ formData.showPassword ? 'fa fa-eye' : 'fa fa-eye-slash' ]" class="toggle-password text-dark" @click="togglePassword()"></i>
                     <div class="invalid-feedback" v-if="formErrors.password">Please enter a password.</div>
                 </div>
         <div class="form-group">
@@ -43,7 +43,7 @@
         <cloud-error v-if="cloudError==='emailAlreadyInUse'">It looks like there's already an account with your email address. If you forgot your password, you can recover it <a href="password/forgot">here</a>.</cloud-error>
                 <cloud-error v-else-if="cloudError"></cloud-error>
                 <div class="form-group">
-          <ajax-button type="submit" :syncing="syncing" class="btn-dark btn-lg btn-block">Create account</ajax-button>
+          <ajax-button type="submit" :syncing="syncing" class="btn-primary btn-lg btn-block">Create account</ajax-button>
                 </div>
             </ajax-form>
             <p class="text-center">Have an account? <a href="/login">Sign in</a></p>
